workplace/log/build_2024-05-04_23-10-53/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/track.py", line 64
    for i in range 10:
                    ^
SyntaxError: invalid syntax

